@@ -1,5 +1,6 @@
 Version 2.02.76
 ===================================
+  Fix vgchange to process -a, --refresh, --monitor and --poll like lvchange.
   Add lvm2app functions to query any pv, vg, or lv property / report field.
 
 Version 2.02.75 - 25th October 2010
